k8s/app/overlays/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory
  labels:
    environment: stage
