k8s/app/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: memory
          volumeMounts:
            - name: memory-data
              mountPath: /data/memory
      volumes:
        - name: memory-data
          persistentVolumeClaim:
            claimName: pvc-memory-data
