k8s/app/overlays/stage/ssh-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-ssh
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
      nodePort: 30022
      protocol: TCP
